# qualibration-libs

./: .dockerignore  .gitignore  CHANGELOG.md  DOCKER_README.md  Dockerfile  LICENSE  README.md  SETUP_SUMMARY.md  auto_setup.py  code_cleanup_todo.md  docker-compose.yml  manual_setup_qualibrate.py  progress_log.md  publish-package.sh  pyproject.toml  refactoring_summary.md  run_test.bat  run_test.sh  test_docker.py  test_local_setup.py  test_setup_qualibrate.py
pylint_qua_plugin/: pylint_qua_plugin.py
qualibration_libs/: io.py  pyproject.toml  xarray_data_fetcher.py
qualibration_libs/analysis/: __init__.py  feature_detection.py  fitting.py  guess.py  models.py  parameters.py  processing.py  signal.py
qualibration_libs/analysis/helpers/: power_rabi.py  resonator_spectroscopy.py  resonator_spectroscopy_vs_amplitude.py  resonator_spectroscopy_vs_flux.py
qualibration_libs/config/: __init__.py  create_qualibrate_config.py  setup.py  setup_qualibrate.py
qualibration_libs/core/: __init__.py  batchable_list.py  exceptions.py  trackable_object.py
qualibration_libs/data/: README.md  __init__.py  cloud_processing.py  fetcher.py  processing.py
qualibration_libs/execute/: progress.py  simulate.py
qualibration_libs/legacy/: macros.py
qualibration_libs/legacy/experiments/: simulation.py
qualibration_libs/legacy/experiments/cz_pi_calibration/: FittingBaseClass.py  cosine.py
qualibration_libs/legacy/experiments/iq_blobs/: fetch_dataset.py  parameters.py
qualibration_libs/legacy/experiments/qubit_spectroscopy/: analysis.py  node.py  parameters.py  plotting.py
qualibration_libs/legacy/experiments/ramsey/: parameters.py  plotting.py
qualibration_libs/legacy/experiments/ramsey/analysis/: fetch_dataset.py  fitting.py
qualibration_libs/legacy/experiments/readout_optimization_3d/: make_qua_streams_per_qubit.py  make_qua_variables_per_qubit.py  measurement_batching.py  parameters.py
qualibration_libs/legacy/experiments/readout_optimization_3d/analysis/: fetch_dataset.py  filtering.py
qualibration_libs/legacy/experiments/res_spec_vs_qubit_flux/: analysis.py  plotting.py
qualibration_libs/legacy/experiments/resonator_spectroscopy/: analysis.py  parameters.py  plotting.py
qualibration_libs/legacy/experiments/time_of_flight/: analysis.py  node.py  parameters.py  plotting.py
qualibration_libs/legacy/experiments/two_qubit_rb/: RBBaker.py  RBResult.py  TwoQubitRB.py  TwoQubitRBDebugger.py  __init__.py  gates.py  simple_tableau.py  util.py
qualibration_libs/legacy/experiments/two_qubit_rb/test/: configuration.py  verification.py
qualibration_libs/legacy/experiments/two_qubit_xeb/: README.md  __init__.py  gateset.py  macros.py  qua_gate.py  xeb.py  xeb_config.py
qualibration_libs/legacy/lib/: cryoscope_tools.py  fit_utils.py  plot_utils.py  pulses.py  qua_datasets.py  save_utils.py
qualibration_libs/legacy/quam_builder/: machine.py  pulses.py
qualibration_libs/legacy/quam_builder/transmons/: add_transmon_drive_component.py  add_transmon_flux_component.py  add_transmon_pair_component.py  add_transmon_resonator_component.py
qualibration_libs/parameters/: __init__.py  common.py  experiment.py  sweep.py
qualibration_libs/plotting/: COMMIT_SUMMARY.md  FEATURE_STATUS.md  FIT_OVERLAY_FIX.md  MIGRATION_EXAMPLES.md  MIGRATION_GUIDE.md  PLOTTING_ISSUE_RESOLUTION.md  QUICK_REFERENCE.md  README.md  REAL_FIT_DATA_USAGE.md  TESTING_AND_DEMOS.md  __init__.py  accessors.py  api.py  base.py  config.py  configs.py  data_utils.py  exceptions.py  figure.py  grid.py  grids.py  helpers.py  overlay_backends.py  overlays.py  plot_utils.py  plotters.py  preparators.py  run_tests.py  simulator.py  standard_plotter.py  styles.py  typing.py  utils.py
qualibration_libs/plotting/configs/: __init__.py  adaptive.py  base.py  builder.py  constants.py  heatmap.py  spectroscopy.py  templates.py  visual_standards.py
qualibration_libs/plotting/demos/: __init__.py  advanced_plots.py  annotation_functionality_demo.py  basic_plots.py  correct_raw_vs_fit_demo.py  feature_verification.py  fit_overlay_demo.py  legend_color_reset_demo.py  multi_qubit_color_consistency_demo.py  palette_decorator_demo.py  qubit_grid_demo.py  real_fit_data_demo.py  residuals_demo.py  simple_demo.py
qualibration_libs/plotting/engines/: __init__.py  adaptive_engine.py  base_engine.py  common.py  data_validators.py  experiment_detector.py  matplotlib_engine.py  plotly_engine.py
qualibration_libs/plotting/huo/: plot_02a_resonator_spectroscopy_results_plotly.py  plot_02b_resonator_spectroscopy_vs_power_results_plotly.py  plot_02c_resonator_spectroscopy_vs_flux_results_plotly.py  plot_04b_power_rabi_results_plotly.py
qualibration_libs/plotting/preparators/: __init__.py  power_rabi.py  resonator_spectroscopy.py  resonator_vs_amplitude.py  resonator_vs_flux.py
qualibration_libs/plotting/test_data/: ds_fit.h5  ds_fit_2.h5  ds_fit_3.h5  ds_raw.h5  ds_raw_2.h5  ds_raw_3.h5
qualibration_libs/plotting/tests/: __init__.py  test_figure.py  test_overlays.py  test_qubitgrid_new.py  test_styles.py
qualibration_libs/runtime/: __init__.py  simulate.py
qualibration_libs/tests/: __init__.py  conftest.py  test_batchable_list.py  test_exceptions.py  test_experiment.py  test_feature_detection.py  test_fetcher.py  test_grids.py  test_guess.py  test_processing.py  test_trackable_object.py
(+37 files in other folders)
