[project]
name = "qualibration-libs"
version = "0.3.0"
description = "Utility library supporting calibration nodes and graphs for the QUAlibration graphs platform."
readme = "README.md"
authors = [{ name = "Theo Laudat", email = "theo@quantum-machines.co" }]
requires-python = ">=3.10, <3.14"
dependencies = [
    "colorama>=0.4.6",
    "lmfit>=1.3.3",
    "matplotlib>=3.10.0",
    "numpy>=1.20.0,<3",
    "qm-qua>=1.2.2",
    "quam-builder>=0.1.2",
    "qualibrate>=1.0.2",
    "xarray>=2024.7.0",
]

[project.scripts]
setup-qualibrate-config = "qualibration_libs.config.setup_qualibrate:setup_qualibrate_config"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["qualibration_libs"]

[tool.pytest.ini_options]
testpaths = ["qualibration_libs/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
