[project]
name = "qualibration-libs"
version = "0.3.0"
description = "Utility library supporting calibration nodes and graphs for the QUAlibration graphs platform."
readme = "README.md"
authors = [{ name = "Theo Laudat", email = "theo@quantum-machines.co" }]
requires-python = ">=3.10, <=3.13"
dependencies = [
    "colorama>=0.4.6",
    "lmfit>=1.3.3",
    "matplotlib>=3.10.0",
    "numpy>=1.20.0,<3",
    "qm-qua>=1.2.2",
    "quam-builder@git+https://github.com/qua-platform/quam-builder.git",
    "qualibrate>=1.0.2",
    "scipy>=1.13.1",
    "xarray>=2024.7.0",
]

[project.scripts]
setup-qualibrate-config = "qualibration_libs.config.setup_qualibrate:setup_qualibrate_config"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["qualibration_libs"]

[dependency-groups]
dev = [
    "ipykernel>=7.0.0a1",
    "pre-commit",
    "pylint>=3.0",
    "astroid>=3.0",
    "black",
    "ruff",
    "mypy",
    "commitizen",
    "pytest>=8.3.5",
    "pytest-cov",
    "pytest-mock>=3.14.0",
]

[tool.uv.sources]
quam-builder = { git = "https://github.com/qua-platform/quam-builder.git" }

# -----------------------------
# Black configuration
# -----------------------------
[tool.black]
line-length = 100
target-version = ["py310"]

# -----------------------------
# Mypy configuration (optional but recommended)
# -----------------------------
[tool.mypy]
python_version = "3.10"
packages = ["qm", "quam", "qualang_tools", "qualibrate"]
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
pretty = true

# -----------------------------
# Pylint configuration
# -----------------------------
[tool.pylint.main]
# Load the QUA plugin for suppressing false positives in QUA contexts
# The init-hook finds the repo root (where pyproject.toml lives) and adds it to sys.path
init-hook = "import sys, os; d = os.getcwd(); exec('while d != os.path.dirname(d):\\n if os.path.isfile(os.path.join(d, \"pyproject.toml\")): sys.path.insert(0, d); break\\n d = os.path.dirname(d)')"
load-plugins = ["pylint_qua_plugin"]
ignore = ["venv", ".venv"]

[tool.pylint."messages control"]
enable = ["E", "R", "F", "C"]
disable = ["W", "I", "invalid-name", "import-error", "no-name-in-module", "too-many-locals"]

[tool.pylint.reports]
reports = false

[tool.pylint.format]
max-line-length = 120

[tool.pytest.ini_options]
testpaths = ["qualibration_libs/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
