[project]
name = "qualibration-libs"
version = "0.1.0"
description = "Helper Libraries for Calibration Graphs"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9, <3.13"
dependencies = ["quam>=0.3.10", "plotly", "xarray"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
